fix spacing

--- a/src/app/styles/exploreNow.module.scss
+++ b/src/app/styles/exploreNow.module.scss
@@ -8,7 +8,7 @@
   margin-top: 3rem;
 
   @include media.for-greater-than-medium {
-    margin-top: 5rem;
+    margin: 10rem 0rem;
   }
 
   .container {
@@ -76,7 +76,7 @@
           left: 0;
           bottom: 0;
           width: 100%;
-          padding: 2vw;
+          padding: 0rem 4rem 0rem 2rem;
           color: map-get($colors, text);
 
           display: flex;
@@ -96,6 +96,7 @@
 
             h6 {
               font-size: 1.6vh;
+              font-weight: normal;
               @include media.for-greater-than-medium {
                 font-size: 1.6vw;
               }
@@ -105,6 +106,7 @@
           .count {
             h5 {
               font-size: 6vh;
+              font-weight: normal;
 
               @include media.for-greater-than-medium {
                 font-size: 6vw;
