--- a/src/app/styles/topDestination.module.scss
+++ b/src/app/styles/topDestination.module.scss
@@ -8,7 +8,7 @@
   margin-top: 3rem;
 
   @include media.for-greater-than-medium {
-    margin-top: 5rem;
+    margin: 10rem 0rem;
   }
 
   .container {
